--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link rel="icon" href="/favicon.ico" />
 
-    <title>Vuestic Admin</title>
+    <title>ShrampyBot</title>
   </head>
   <body>
     <div id="app"></div>
